# fsnav

./: .gitignore  CMakeLists.txt  README.md
include/fsnav/: buffer.h  core.h  directory.h  enum.h  io.h  state.h  strbuilder.h  structures.h  term.h  tree.h
src/: buffer.c  core.c  directory.c  fsnav.c  io.c  state.c  term.c  tree.c
